--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,8 @@
+<head>
 
+    <title>DashBoard</title>
+    {{>indexfunctions}}
+</head>
 
 <h1 class="page-header">Dashboard</h1>
 
@@ -31,10 +35,11 @@
                         <div class="image6 col-md-6"><img src="/img/png/Logout.png" alt="logout"></div>
 
                     </div>
-                </div>
+                </div> <input type="button" id="get-favList" value="Get Fav List">
             </div>
         </div>
     </div>
+   
 </div>
 
 
