--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,7 +13,7 @@
         <div class="col-md-12" id="index-grid">
             <div class="index-grid" id="bootstrap-overrides">
                 <div class="col-md-4">
-                    <div class="left" >
+                    <div class="left">
 
                         <div class="image1 "><img src="/img/png/Maps.png" alt="maps"></div>
                         <div class="image2 "><img src="/img/png/Favorite Places.png" alt="favorite_places"></div>
@@ -21,26 +21,15 @@
                 </div>
 
                 <div class="col-md-4">
-                    <div class="center" >
-                        <div class="image4 "><img src="/img/png/Messages.png" alt="messages"></div>
+                    <div class="center">
+                        <div class="image4 "><img data-bind="src: photo" alt="messages"></div>
                     </div>
                 </div>
 
-                <div class="col-md-4">
-                    <div class="right" >
-
-                        <div class="image3 col-md-12"><img src="/img/png/Events.png" alt="events"></div>
-
-                        <div class="image5 col-md-6"><img src="/img/png/Settings.png" alt="settings"></div>
-                        <div class="image6 col-md-6"><img src="/img/png/Logout.png" alt="logout"></div>
-
-                    </div>
-                </div> <input type="button" id="get-favList" value="Get Fav List">
+                <input type="button" id="get-favList" value="Get Fav List">
+                <input type="button" id="test" value="testphoto">
             </div>
         </div>
     </div>
-   
+
 </div>
-
-
-
