--- a/views/partials/mapfunctions.handlebars
+++ b/views/partials/mapfunctions.handlebars
@@ -8,6 +8,8 @@
     async defer>
 
     </script>
+<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js'></script>
+
 
 <!-- google maps api-->
 <script type="text/javascript">
