--- a/views/partials/head.handlebars
+++ b/views/partials/head.handlebars
@@ -11,6 +11,7 @@
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 
 <script src = "/js/handlebars-v4.0.10.js"></script>
+<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js'></script>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <!--BootStrap -->
