--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,22 +12,19 @@
     <div class="row">
         <div class="col-md-12" id="index-grid">
             <div class="index-grid" id="bootstrap-overrides">
-                <div class="col-md-4">
+                <div class="col-md-6">
                     <div class="left">
-
                         <div class="image1 "><img src="/img/png/Maps.png" alt="maps"></div>
+                        <div  ><img id="fav-photo" data-bind="attr: {src:photo}" alt="messages"/></div>
+                    </div>
+                </div>
+
+                <div class="col-md-6">
+                    <div class="center">
+                        
                         <div class="image2 "><img src="/img/png/Favorite Places.png" alt="favorite_places"></div>
                     </div>
                 </div>
-
-                <div class="col-md-4">
-                    <div class="center">
-                        <div class="image4 "><img data-bind="src: photo" alt="messages"></div>
-                    </div>
-                </div>
-
-                <input type="button" id="get-favList" value="Get Fav List">
-                <input type="button" id="test" value="testphoto">
             </div>
         </div>
     </div>
