--- a/views/partials/favfunctions.handlebars
+++ b/views/partials/favfunctions.handlebars
@@ -13,6 +13,7 @@
 <!-- google maps api-->
 <script type="text/javascript">
     var favList = [];
+    var favList1 = favList;
 
     $(function () {
         event.preventDefault();
@@ -38,11 +39,7 @@
         });
 
     });
-    var gridPhotoModel = function (photo) {
-        console.log(photo);
-        this.photo = ko.observable(photo);
-    }
-    
+
     function getPlacePhoto(favTile, photo) {
         console.log(favTile.markerID);
         var innerHTML = document.getElementById('fav-photo');
@@ -62,13 +59,59 @@
                     ko.applyBindings(new gridPhotoModel(photo));
                 }
 
-
+document.getElementById('load-list').addEventListener('click', function () {
+            favlocation(favList);
+        });
 
             }
 
-        });
+        })
 
 
+    };
+
+
+var gridPhotoModel = function (photo) {
+        console.log(photo);
+        this.photo = ko.observable(photo);
     }
 
+    var LocationsViewModel = function(location) {
+        
+       var favlocations = ko.observableArray(favlocations);
+        favlocations.push(this.location);
+    } 
+
+    
+    function favlocation(favList, location) {
+     
+        
+        var self = this;
+
+        for (i = 0; i < favList.length; i++) {
+          var loc = favList[i];
+
+            var location = {
+                name: loc.title,
+               
+                
+            }
+            console.log(location.name);
+         
+             
+         
+        };
+
+       ko.applyBindings(new LocationsViewModel(location));
+        
+   
+
+ }
+    
+
+   
+
+    
+
+    
 </script>
