--- a/public/css/main.css
+++ b/public/css/main.css
@@ -146,26 +146,11 @@ float: left;
     height: 75%;
 }
 
-.image4{
+
+#fav-photo{
     position: relative;
-    padding: 1px;
-
-
-
-
-}
-
-.image5{
-    
-    padding-left:1px;
-    position: absolute;
-    padding: 1px;
-
-}
-.image6{
-    width: 100%;
-    position: absolute;
-    padding: 1px;
+    max-width: 100%;
+    max-height: 100%;
 }
 /* Index irregular grid */
 
