fav places list

--- a/views/favPlaces.handlebars
+++ b/views/favPlaces.handlebars
@@ -26,7 +26,7 @@
                 <!-- Todo: Generate table body -->
                 <tbody data-bind="foreach: favList">
                     <tr>
-                        <td data-bind="text:location "> </td>
+                        <td data-bind="text:title "> </td>
                         <td>test</td>
                         <td></td>
                     </tr>
