--- a/views/favPlaces.handlebars
+++ b/views/favPlaces.handlebars
@@ -19,16 +19,16 @@
                     <tr>
                         <th>Location Name</th>
                         <th>Address</th>
-                        <th>Rating</th>
+                        <th>Phone</th>
                         <th></th>
                     </tr>
                 </thead>
                 <!-- Todo: Generate table body -->
-                <tbody data-bind="foreach: favList">
+                <tbody id="table" data-bind="foreach: favlocations">
                     <tr>
                         <td data-bind="text:title "> </td>
-                        <td>test</td>
-                        <td></td>
+                        <td id="addressdiv" data-bind="text:address "></td>
+                        <td id="phonediv" data-bind="text:phone "></td>
                     </tr>
                 </tbody>
             </table>
