--- a/views/maps.handlebars
+++ b/views/maps.handlebars
@@ -1,7 +1,7 @@
 <head>
 
     <title>Maps</title>
-    {{>mapfunctions}}
+  
 </head>
 
 
@@ -40,7 +40,7 @@
                     <input type="button" id="place-search" value="Search">
                     <input type="button" id="clear-search" value="Clear Search">
                 </div>
-                <hr>
+                
                 <div>
                     <span class="text">Within</span>
                     <select id="max-duration">
@@ -55,8 +55,7 @@
                         <option value="BICYCLING">Bicycling</option>
                         <option value="TRANSIT">Transit</option>
                     </select>
-                    <span class="text">of</span>
-                    <input type="text" id="search-within-time-text" placeholder="Ex: Google office or 75 9th St">
+                    <span class="text">of my current location.</span>
                     <input type="button" id="search-within-time" value="Go">
                 </div>
 
