--- a/views/partials/head.handlebars
+++ b/views/partials/head.handlebars
@@ -11,7 +11,7 @@
 <link rel="stylesheet" type="text/css" href="/css/main.css">
 
 <script src = "/js/handlebars-v4.0.10.js"></script>
-<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js'></script>
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 <!--BootStrap -->
@@ -44,5 +44,17 @@
     }
 </script>-->
 
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+<script src="https://code.jquery.com/jquery-1.12.0.min.js"></script>
+<script>
+    window.jQuery || document.write('<script src="/js/vendor/jquery-1.12.0.min.js"><\/script>')
 
+</script>
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyASBPr5sRT2E6DcIpLZmtNwFm0S4A0RCkk&libraries=places,drawing,geometry&callback=initMap"
+    async defer>
 
+</script>
+<script type='text/javascript' src='https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.2/knockout-min.js'></script>
+<script src="/js/mapfunc.js"></script>
+<!--<script src="/js/indexfunc.js"></script>
+<script src="/js/favfunc.js"></script> -->
