--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -10,23 +10,26 @@
 
 <div class="container-fluid">
     <div class="row">
-        <div class="col-md-12" id="index-grid">
+        
             <div class="index-grid" id="bootstrap-overrides">
                 <div class="col-md-6">
-                    <div class="left">
-                        <div class="image1 "><img src="/img/png/Maps.png" alt="maps"></div>
-                        <div  ><img id="fav-photo" data-bind="attr: {src:photo}" alt="messages"/></div>
-                    </div>
+                    <div ><a href="/maps/home"><img  src="/img/png/Google_Maps_logo_wordmark.png" alt="maps"></a></div>
+                    <h1><a href="/maps/home">Click To View Your Map</a></h1> 
+                    <div ><a href="/maps/home"><img class="image1 " src="/img/jpeg/google-maps1.jpg" alt="maps"></a></div>
                 </div>
 
                 <div class="col-md-6">
-                    <div class="center">
-                        
-                        <div class="image2 "><img src="/img/png/Favorite Places.png" alt="favorite_places"></div>
-                    </div>
+                     <div ><a href="/favlocation"><img src="/img/png/placeslogoweb.png" alt="maps"></a></div>
+                     <h1 id="dash-headers"><a href="/favlocation">Click To View Your Saved Locations</a></h1>        
+                    <div  ><a href="/favlocation"><img class="image2 " id="fav-photo" data-bind="attr: {src:photo}" alt="messages"/></a></div>
                 </div>
+
+                
+                
+
+                
             </div>
-        </div>
+        
     </div>
 
 </div>
